--- a/django__5/templates/pages/home_page.html
+++ b/django__5/templates/pages/home_page.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <div>
-
+    <form action="https://www.google.com/search" method="get">
+        <input type="text" name = 'q' placeholder="title">
+        <input type="submit" value = 'search'>
+    </form>
     <h2> Props drilling {{ title }}</h2>
 
     <h2> {{ dict1.django }} </h2>
