--- a/django__5/templates/pages/student_list.html
+++ b/django__5/templates/pages/student_list.html
@@ -6,12 +6,17 @@
 
 {% block content %}
  {% for i in students %}
+
      <ul>
 {#        <li>{{ i }} -----> {{ i.number }}</li>#}
          <a href = "{% url 'detail' i.id %}">
             <li>{{ i }} </li>
          </a>
+
      </ul>
 
     {% endfor %}
+    <button type="submit" name="add"
+            onclick="location.href = '{% url 'add' %}'">Add new person </button>
+    <p> There are <span style="color: blue; font-size:23px ">{{ counts }}</span> person</p>
 {% endblock content %}
