--- a/django__5/templates/pages/home_page.html
+++ b/django__5/templates/pages/home_page.html
@@ -11,7 +11,9 @@
 {#    <div>#}
 {% block title %} Crud works Starts  {% endblock title %}
 {% block content %}
-<h2>CRUD OPERATIONS</h2>
+    <h2>CRUD OPERATIONS</h2>
+    <a href="{% url 'add' %}"><button>Add Student</button></a>
+    <a href="{% url 'list' %}"><button>List</button></a>
 {% endblock content %}
 
 {#    <form action="https://www.google.com/search" method="get">#}
