--- a/django__5/templates/pages/student_update.html
+++ b/django__5/templates/pages/student_update.html
@@ -1,5 +1,19 @@
 {% extends 'pages/base.html' %}
 
+{% block title %}
+   Update Student
+
+{% endblock title %}
+
+
 {% block content %}
-   <h4>{{ student.first_name }} {{ student.last_name }}  updated</h4>
+
+    <h2>Update Student</h2>
+    <form action="", method="POST">
+    {% csrf_token %}
+    {{ form.as_p }}
+
+    <input type="submit", value="Update">
+    </form>
+    <a href="{% url 'list' %}"><button>Cancel</button></a>
 {% endblock content %}
