--- a/smartedu/templates/courses.html
+++ b/smartedu/templates/courses.html
@@ -29,12 +29,12 @@
                                         <p>{{course.description | truncatechars:140}}</p>
                                     </div>
                                 </div>
-{#                                <div class="course-meta-bot">#}
-{#                                    <ul>#}
-{#                                        <li><i class="fa fa-calendar" aria-hidden="true"></i> {{course.date|date:"d M Y"}}</li>#}
-{#                                        <li><i class="fa fa-book" aria-hidden="true"></i> {{course.teacher}}</li>#}
-{#                                    </ul>#}
-{#                                </div>#}
+                                <div class="course-meta-bot">
+                                    <ul>
+                                        <li><i class="fa fa-calendar" aria-hidden="true"></i> {{course.date|date:"d M Y"}}</li>
+                                        <li><i class="fa fa-book" aria-hidden="true"></i> {{course.teacher}}</li>
+                                    </ul>
+                                </div>
                             </div>
                         </div><!-- end col -->
 						{% endfor %}
