--- a/smartedu/templates/teacher.html
+++ b/smartedu/templates/teacher.html
@@ -5,7 +5,7 @@
 		
 	<div class="all-title-box">
 		<div class="container text-center">
-			<h1>{{ teacher.name }}</span></h1>
+			<h1><span>{{ teacher.name }}</span></h1>
 		</div>
 	</div>
 	
@@ -30,6 +30,8 @@
 								<li><a href="{{ teacher.linkedin }}"><i class="fa fa-linkedin"></i></a></li>
 							</ul>
 						</div>
+
+
 					</div>
 					
 					
