--- a/smartedu/templates/about.html
+++ b/smartedu/templates/about.html
@@ -93,7 +93,7 @@
 		</div>
 	</div>
 
-    <div id="testimonials" class="parallax section db parallax-off" style="background-image:url('images/parallax_04.jpg');">
+    <div id="testimonials" class="parallax section db parallax-off" style="background-image:url('{% static "images/parallax_17.jpg" %}');">
         <div class="container">
             <div class="section-title text-center">
                 <h3>Testimonials</h3>
