--- a/smartedu/templates/course.html
+++ b/smartedu/templates/course.html
@@ -51,24 +51,26 @@
 					</div>
 				</div>
 
-{#				<div class="blog-author">#}
-{#					<div class="author-bio">#}
-{#						<h3 class="author_name"><a#}
-{#								href="{% url 'teacher_detail' course.teacher.pk %}">{{course.teacher.name}}</a></h3>#}
-{#						<h5>{{course.teacher.title}}</h5>#}
-{#						<p class="author_det">#}
-{#							{{course.teacher.description}}#}
-{#						</p>#}
-{#					</div>#}
-{#					<div class="author-desc">#}
-{#						<img src="{{course.teacher.image.url}}" alt="about author">#}
-{#						<ul class="author-social">#}
-{#							<li><a href="{{course.teacher.facebook}}"><i class="fa fa-facebook"></i></a></li>#}
-{#							<li><a href="{{course.teacher.twitter}}"><i class="fa fa-twitter"></i></a></li>#}
-{#							<li><a href="{{course.teacher.linkedin}}"><i class="fa fa-linkedin"></i></a></li>#}
-{#						</ul>#}
-{#					</div>#}
-{#				</div>#}
+				<div class="blog-author">
+					<div class="author-bio">
+						<h3 class="author_name"><a
+								href="{% url 'teacher_detail' course.teacher.pk %}">{{course.teacher.name}}</a></h3>
+						<h5>{{course.teacher.title}}</h5>
+						<p class="author_det">
+							{{course.teacher.description}}
+						</p>
+					</div>
+					<div class="author-desc">
+
+                        <a href="{% url 'teacher_detail' course.teacher.pk %}"><img src="{{course.teacher.image.url}}"
+                            alt="about author" style = "border-radius: 5vh;width:60px;height:70px; "> </a>
+						<ul class="author-social">
+							<li><a href="{{course.teacher.facebook}}"><i class="fa fa-facebook"></i></a></li>
+							<li><a href="{{course.teacher.twitter}}"><i class="fa fa-twitter"></i></a></li>
+							<li><a href="{{course.teacher.linkedin}}"><i class="fa fa-linkedin"></i></a></li>
+						</ul>
+					</div>
+				</div>
 
 
 			</div><!-- end col -->
