--- a/smartedu/templates/courses.html
+++ b/smartedu/templates/courses.html
@@ -43,16 +43,16 @@
 					
                 </div><!-- end col -->
 				<div class="col-lg-3 col-12 right-single">
-{#					<div class="widget-search">#}
-{#						<div class="site-search-area">#}
-{#							<form method="get" id="site-searchform" action="{% url 'search' %}">#}
-{#								<div>#}
-{#									<input class="input-text form-control" name="search" placeholder="Search keywords..." type="text">#}
-{#									<input id="searchsubmit" value="Search" type="submit">#}
-{#								</div>#}
-{#							</form>#}
-{#						</div>#}
-{#					</div>#}
+					<div class="widget-search">
+						<div class="site-search-area">
+							<form method="get" id="site-searchform" action="{% url 'search' %}">
+								<div>
+									<input class="input-text form-control" name="search" placeholder="Search keywords..." type="text">
+									<input id="searchsubmit" value="Search" type="submit">
+								</div>
+							</form>
+						</div>
+					</div>
 					<div class="widget-categories">
 						<h3 class="widget-title">Categories</h3>
 						<ul>
