--- a/smartedu/templates/partials/_navbar.html
+++ b/smartedu/templates/partials/_navbar.html
@@ -18,23 +18,25 @@
                     <li class="nav-item {% if 'courses' in request.path %} active {% endif %}"><a class="nav-link" href="{% url 'courses' %}">Courses</a></li>
                     <li class="nav-item {% if 'teachers' in request.path %} active {% endif %}"><a class="nav-link" href="{% url 'teachers' %}">Teachers</a></li>
                     <li class="nav-item {% if 'contact' in request.path %} active {% endif %}"><a class="nav-link" href="{% url 'contact' %}">Contact</a></li>
+{#                <li class="nav-item {% if 'Book_Now' in request.path %} active {% endif %}"><a class="nav-link" href="{% url 'contact' %}">Book Now</a></li>#}
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
 
-{#                    {% if user.is_authenticated %}#}
-{#                    <li><a class="hover-btn-new log orange mr-2" href="{% url 'dashboard' %}"><span>{{user.username}}</span></a></li>#}
-{#                    <li><a class="hover-btn-new log orange" href="javascript:{document.getElementById('logout').submit()}"><span><i class="fa fa-sign-out"></i></span></a>#}
-{#                        <form action="{% url 'logout' %}" method="POST" id="logout">#}
-{#                            {% csrf_token %}#}
-{#                            <input type="hidden">#}
-{#                        </form>#}
-{#                    </li>#}
-                    
-{#                    {% else %}#}
-{#                    <li><a class="hover-btn-new log orange mr-2" href="{% url 'login' %}"><span><i class="fa fa-sign-in"></i></span></a></li>#}
-{#                    <li><a class="hover-btn-new log orange" href="{% url 'register' %}"><span><i class="fa fa-user-plus"></i></span></a></li>#}
+                    {% if user.is_authenticated %}
 
-{#                    {% endif %}#}
+                    <li><a class="hover-btn-new log orange mr-2" href="{% url 'dashboard' %}"><span>{{user.username}}</span></a></li>
+                    <li><a class="hover-btn-new log orange" href="javascript:{document.getElementById('logout').submit()}"><span><i class="fa fa-sign-out"></i></span></a>
+                        <form action="{% url 'logout' %}" method="POST" id="logout">
+                            {% csrf_token %}
+                            <input type="hidden">
+                        </form>
+                    </li>
+
+                    {% else %}
+                    <li><a class="hover-btn-new log orange mr-2" href="{% url 'login' %}"><span><i class="fa fa-sign-in"></i></span></a></li>
+                    <li><a class="hover-btn-new log orange" href="{% url 'register' %}"><span><i class="fa fa-user-plus"></i></span></a></li>
+
+                    {% endif %}
                 </ul>
             </div>
         </div>
