--- a/smartedu/templates/course.html
+++ b/smartedu/templates/course.html
@@ -19,20 +19,20 @@
 					</div>
 					<div class="post-content">
 						<div class="post-date">
-{#							{% if user.is_authenticated %}#}
-{##}
-{#								{% if course in enrolled_courses %}#}
+							{% if user.is_authenticated %}
+
+								{% if course in enrolled_courses %}
 								<button type="submit" class="btn btn-outline-danger rounded-0" data-toggle="modal"
 									data-target="#releaseModal">
 									<span>RELEASE</span>
 								</button>
-{#								{% else %}#}
+								{% else %}
 								<button type="submit" class="btn btn-outline-success rounded-0" data-toggle="modal"
 									data-target="#enrollModal">
 									<span>ENROLL</span>
 								</button>
-{#								{% endif %}#}
-{#							{% endif %}#}
+								{% endif %}
+							{% endif %}
 						</div>
 						<div class="meta-info-blog">
 							<span><i class="fa fa-calendar"></i> {{course.date|date:"d M Y"}}</span>
@@ -123,17 +123,17 @@
 				<p>You will enroll the course below:</p>
 				<h1>{{course.name}}</h1>
 			</div>
-{#			<div class="modal-footer">#}
-{#				<form action="{% url 'enroll_the_course' %}" method="POST">#}
-{#					{% csrf_token %}#}
-{#					<input type="hidden" name="user_id" value="{{user.id}}">#}
-{#					<input type="hidden" name="course_id" value="{{course.id}}">#}
-{#					<input type="submit" value="I AM SURE" class="btn btn-success">#}
-{#				</form>#}
-{#				<button type="button" class="btn btn-secondary" data-dismiss="modal">#}
-{#					CANCEL#}
-{#				</button>#}
-{#			</div>#}
+			<div class="modal-footer">
+				<form action="{% url 'enroll_the_course' %}" method="POST">
+					{% csrf_token %}
+					<input type="hidden" name="user_id" value="{{user.id}}">
+					<input type="hidden" name="course_id" value="{{course.id}}">
+					<input type="submit" value="I AM SURE" class="btn btn-success">
+				</form>
+				<button type="button" class="btn btn-secondary" data-dismiss="modal">
+					CANCEL
+				</button>
+			</div>
 		</div>
 	</div>
 </div>
@@ -153,17 +153,17 @@
 				<p>You will release the course below:</p>
 				<h1>{{course.name}}</h1>
 			</div>
-{#			<div class="modal-footer">#}
-{#				<form action="{% url 'release_the_course' %}" method="POST">#}
-{#					{% csrf_token %}#}
-{#					<input type="hidden" name="user_id" value="{{user.id}}">#}
-{#					<input type="hidden" name="course_id" value="{{course.id}}">#}
-{#					<input type="submit" value="I AM SURE" class="btn btn-danger">#}
-{#				</form>#}
-{#				<button type="button" class="btn btn-secondary" data-dismiss="modal">#}
-{#					CANCEL#}
-{#				</button>#}
-{#			</div>#}
+			<div class="modal-footer">
+				<form action="{% url 'release_the_course' %}" method="POST">
+					{% csrf_token %}
+					<input type="hidden" name="user_id" value="{{user.id}}">
+					<input type="hidden" name="course_id" value="{{course.id}}">
+					<input type="submit" value="I AM SURE" class="btn btn-danger">
+				</form>
+				<button type="button" class="btn btn-secondary" data-dismiss="modal">
+					CANCEL
+				</button>
+			</div>
 		</div>
 	</div>
 </div>
