--- a/smartedu/templates/dashboard.html
+++ b/smartedu/templates/dashboard.html
@@ -5,7 +5,7 @@
 		
 	<div class="all-title-box">
 		<div class="container text-center">
-			<h1>{{ user.username }}</span></h1>
+			<h1><span>{{ user.username }}</span></h1>
 		</div>
 	</div>
 	
@@ -16,7 +16,7 @@
 					
 					<div class="blog-author">
 						<div class="author-bio">
-							<h2 class="author_name">{{ user.first_name }} {{ user.last_name }}</h3>
+							<h2 class="author_name">{{ user.first_name }} {{ user.last_name }}> </h2>
 
 						</div>
 					</div>
