--- a/smartedu/templates/index.html
+++ b/smartedu/templates/index.html
@@ -215,7 +215,7 @@
 
 				<div class="col-md-4 col-sm-4 col-xs-12">
 					<span data-scroll class="global-radius icon_wrap effect-1 alignleft"><i class="flaticon-years"></i></span>
-					<p class="stat_count">{{total_teachers}}</p>
+{#					<p class="stat_count">{{course.teacher.count}}</p>#}
 					<h3>Teachers</h3>
 				</div><!-- end col -->
 
