--- a/smartedu/templates/login.html
+++ b/smartedu/templates/login.html
@@ -26,7 +26,7 @@
                             {% endfor %}
 
                             {% endif %}
-
+                            {{ form.non_field_errors }}
                             <div class="form-group">
                                 <div class="col-sm-12">
                                     {{form.username}}
@@ -34,7 +34,23 @@
                             </div>
                             <div class="form-group">
                                 <div class="col-sm-12">
+                                    {{ form.password.label_tag }}
                                     {{form.password}}
+
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="col-sm-12">
+                                    {{ form.birth_year.label_tag }}
+                                    {{form.birth_year}}
+
+                                </div>
+                            </div>
+                                      <div class="form-group">
+                                <div class="col-sm-12">
+
+                                    {{date}}
+
                                 </div>
                             </div>
                             <div class="row">
